# strong_typedefs

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  bazel_to_cmake.py  bazel_to_cmake_test.py  strong_typedefs.h  strong_typedefs_test.cc
.github/workflows/: pre-commit.yml  test.yml
