"""https://github.com/jbcoe/strong_typedefs"""
module(
    name = "xyz_strong_typedefs",
    version = "head",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "0.40.0")
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)

use_repo(python, "python_3_11_toolchains")


bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
    repo_name = "rules_cc",
)
