"""https://github.com/jbcoe/strong_typedefs"""
module(
    name = "xyz_strong_typedefs",
    version = "head",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
    repo_name = "rules_cc",
)
